# YiriOneBotDocuments

./: README.md  mkdocs.yml  pyproject.toml
.github/workflows/: static.yml
docs/: getting-started.md  index.md
docs/basic/: about-bot-object.md  async-programming.md
examples/: sync-and-async.ipynb
